// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotFoundErrors component renders correctly for index-pattern type 1`] = `
<div
  class="euiPanel euiPanel--danger euiPanel--paddingMedium euiCallOut euiCallOut--danger emotion-euiPanel-none-m-danger-euiCallOut"
>
  <p
    class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader-danger"
  >
    <span
      aria-hidden="true"
      class="emotion-euiCallOut__icon"
      color="inherit"
      data-euiicon-type="warning"
    />
    There is a problem with this saved object
  </p>
  <div
    class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
  />
  <div
    class="euiText emotion-euiText-s-euiTextColor-default"
  >
    <div>
      The data view associated with this object no longer exists.
    </div>
    <div>
      If you know what this error means, you can use the 
      <a
        aria-label="Saved objects APIs"
        class="euiLink emotion-euiLink-primary"
        href="https://www.elastic.co/guide/en/kibana/mocked-test-branch/saved-objects-api.html#saved-objects-api"
        rel="noopener noreferrer"
        target="_blank"
      >
        Saved objects APIs
        <span
          class="emotion-EuiExternalLinkIcon"
          data-euiicon-type="popout"
          role="presentation"
        />
        <span
          class="emotion-euiScreenReaderOnly"
        >
          (external, opens in a new tab or window)
        </span>
      </a>
       to fix it — otherwise click the delete button above.
    </div>
  </div>
</div>
`;

exports[`NotFoundErrors component renders correctly for index-pattern-field type 1`] = `
<div
  class="euiPanel euiPanel--danger euiPanel--paddingMedium euiCallOut euiCallOut--danger emotion-euiPanel-none-m-danger-euiCallOut"
>
  <p
    class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader-danger"
  >
    <span
      aria-hidden="true"
      class="emotion-euiCallOut__icon"
      color="inherit"
      data-euiicon-type="warning"
    />
    There is a problem with this saved object
  </p>
  <div
    class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
  />
  <div
    class="euiText emotion-euiText-s-euiTextColor-default"
  >
    <div>
      A field associated with this object no longer exists in the data view.
    </div>
    <div>
      If you know what this error means, you can use the 
      <a
        aria-label="Saved objects APIs"
        class="euiLink emotion-euiLink-primary"
        href="https://www.elastic.co/guide/en/kibana/mocked-test-branch/saved-objects-api.html#saved-objects-api"
        rel="noopener noreferrer"
        target="_blank"
      >
        Saved objects APIs
        <span
          class="emotion-EuiExternalLinkIcon"
          data-euiicon-type="popout"
          role="presentation"
        />
        <span
          class="emotion-euiScreenReaderOnly"
        >
          (external, opens in a new tab or window)
        </span>
      </a>
       to fix it — otherwise click the delete button above.
    </div>
  </div>
</div>
`;

exports[`NotFoundErrors component renders correctly for search type 1`] = `
<div
  class="euiPanel euiPanel--danger euiPanel--paddingMedium euiCallOut euiCallOut--danger emotion-euiPanel-none-m-danger-euiCallOut"
>
  <p
    class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader-danger"
  >
    <span
      aria-hidden="true"
      class="emotion-euiCallOut__icon"
      color="inherit"
      data-euiicon-type="warning"
    />
    There is a problem with this saved object
  </p>
  <div
    class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
  />
  <div
    class="euiText emotion-euiText-s-euiTextColor-default"
  >
    <div>
      The Discover Session associated with this object no longer exists.
    </div>
    <div>
      If you know what this error means, you can use the 
      <a
        aria-label="Saved objects APIs"
        class="euiLink emotion-euiLink-primary"
        href="https://www.elastic.co/guide/en/kibana/mocked-test-branch/saved-objects-api.html#saved-objects-api"
        rel="noopener noreferrer"
        target="_blank"
      >
        Saved objects APIs
        <span
          class="emotion-EuiExternalLinkIcon"
          data-euiicon-type="popout"
          role="presentation"
        />
        <span
          class="emotion-euiScreenReaderOnly"
        >
          (external, opens in a new tab or window)
        </span>
      </a>
       to fix it — otherwise click the delete button above.
    </div>
  </div>
</div>
`;

exports[`NotFoundErrors component renders correctly for unknown type 1`] = `
<div
  class="euiPanel euiPanel--danger euiPanel--paddingMedium euiCallOut euiCallOut--danger emotion-euiPanel-none-m-danger-euiCallOut"
>
  <p
    class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader-danger"
  >
    <span
      aria-hidden="true"
      class="emotion-euiCallOut__icon"
      color="inherit"
      data-euiicon-type="warning"
    />
    There is a problem with this saved object
  </p>
  <div
    class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
  />
  <div
    class="euiText emotion-euiText-s-euiTextColor-default"
  >
    <div />
    <div>
      If you know what this error means, you can use the 
      <a
        aria-label="Saved objects APIs"
        class="euiLink emotion-euiLink-primary"
        href="https://www.elastic.co/guide/en/kibana/mocked-test-branch/saved-objects-api.html#saved-objects-api"
        rel="noopener noreferrer"
        target="_blank"
      >
        Saved objects APIs
        <span
          class="emotion-EuiExternalLinkIcon"
          data-euiicon-type="popout"
          role="presentation"
        />
        <span
          class="emotion-euiScreenReaderOnly"
        >
          (external, opens in a new tab or window)
        </span>
      </a>
       to fix it — otherwise click the delete button above.
    </div>
  </div>
</div>
`;
